# polyplot

./: LICENSE  README.md
client/: README.md  pubspec.yaml
client/android/app/: build.gradle
client/android/app/src/debug/: AndroidManifest.xml
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/fun/polyplot/polyplot/: MainActivity.kt
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart  server.dart
client/linux/: CMakeLists.txt  my_application.cc
client/macos/Runner.xcodeproj/: project.pbxproj
client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
client/macos/Runner/Configs/: AppInfo.xcconfig
client/test/: widget_test.dart
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  main.cpp
server/: .gitignore  Cargo.toml  configuration
server/src/: main.rs
