[package]
name = "polyplot"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
futures-channel = "*"
futures-util = "*"
native-tls = "*"
tokio = { version = "*", features = ["full"] }
tokio-stream = "*"
tokio-native-tls = "*"
tokio-tungstenite = "*"
tungstenite = "*"
