[package]
name = "polyplot"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "*"
futures-util = "*"
jsonwebtoken-google = "*"
native-tls = "*"
serde = "*"
serde_json = "*"
tokio = { version = "*", features = ["full"] }
tokio-native-tls = "*"
tokio-stream = "*"
tokio-tungstenite = "*"
tungstenite = "*"
